--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>This is a burger site</h1>
+    <h2>Do you want to know me better?</h2>
+
+    <a href="">yeasss</a>
+    <a href="">nooooo</a>
+  </body>
 </html>
