html structure added to About_me.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>This is a burger site</h1>
     <h2>Do you want to know me better?</h2>
 
-    <a href="">yeasss</a>
+    <a href="/about_me.html">yeasss</a>
     <a href="">nooooo</a>
   </body>
 </html>
