btn style added

--- a/about_me.html
+++ b/about_me.html
@@ -39,5 +39,8 @@
       filling between the baked layers.[25] In corporate finance, Dutch Sandwich
       and Double Irish with a Dutch sandwich refer to schemes for tax evasion.
     </p>
+    <div class="btn_box">
+      <a href="/">Back to Home</a>
+    </div>
   </body>
 </html>
