--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <h1>This is a burger site</h1>
     <h2>Do you want to know me better?</h2>
-
-    <a href="/about_me.html">yeasss</a>
-    <a href="">nooooo</a>
+    <div class="btn_box">
+      <a class="btn_about" href="/about_me.html">yeasss</a>
+      <a class="btn_contact" href="/contact.html">nooooo</a>
+    </div>
   </body>
 </html>
